[package]
name = "respite"
version = "0.2.1"
edition = "2021"
description = "An async reader for RESP streams"
homepage = "https://github.com/braddunbar/respite"
license = "MIT"
readme = "README.md"
exclude = [
  ".github",
  "ci",
]

[dependencies]
async-recursion = "1.0.5"
bytes = "1.5.0"
ordered-float = "4.2.0"
thiserror = "1.0.57"
triomphe = "0.1.11"

[dependencies.tokio]
version = "1.36.0"
features = [
  "io-util",
]

[dev-dependencies.tokio]
version = "1.36.0"
features = [
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
]
