[package]
name = "respite"
version = "0.3.2"
edition = "2021"
description = "An async reader for RESP streams"
homepage = "https://github.com/braddunbar/respite"
license = "MIT"
readme = "README.md"
rust-version = "1.77.0"
exclude = [
  ".github",
  "ci",
]

[dependencies]
bytes = "1"
ordered-float = "4.2.0"
thiserror = "1.0.57"
triomphe = "0.1.11"

[dependencies.tokio]
version = "1"
features = [
  "io-util",
]

[dev-dependencies.tokio]
version = "1"
features = [
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
]
