[package]
name = "respite"
version = "0.3.9"
edition = "2024"
description = "An async reader for RESP streams"
repository = "https://github.com/braddunbar/respite"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
exclude = [
  ".github",
  "ci",
]

[dependencies]
bytes = "1"
futures = "0.3"
ordered-float = "4"
thiserror = "1"
triomphe = "0.1"

[dependencies.tokio]
version = "1"
features = [
  "io-util",
]

[dev-dependencies.tokio]
version = "1"
features = [
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
]
